kubernetes/potber/overlays/prod/patch-imgpot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imgpot
spec:
  rules:
    - host: imgpot.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imgpot
                port:
                  number: 80
  tls:
    - hosts:
        - imgpot.de
      secretName: imgpot.de-tls
