kubernetes/potber/overlays/prod/patch-potber-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-auth
spec:
  rules:
    - host: auth.potber.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potber-auth
                port:
                  number: 80
  tls:
    - hosts:
        - auth.potber.de
      secretName: auth.potber.de-tls
